--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js"></script> 
+    <title>Rock Paper Scissors</title>
+    <script src="script.js" defer></script> 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class = "game">
+        <div class = "result">
+            
+        </div>
+        <div class="score">
+
+        </div>
+        <div class = "select">
+            <div class = "box">
+                <img src = "./images/rock.png" class = "rock">
+            </div>
+            <div class = "box">
+                <img src = "./images/paper.png"  class = "paper">
+            </div>
+            <div class = "box">
+                <img src = "./images/scissors.png" class = "scissors">
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
